erased a deprecated line

--- a/spam_classification.ipynb
+++ b/spam_classification.ipynb
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -801,8 +801,6 @@
     "            self.embed.load_state_dict({'weight': normalized_embeddings})  \n",
     "            \n",
     "        x = self.embed(x) # (batch, maxlen, embedding_dim)\n",
-    "        \n",
-    "        self.v = x.clone()\n",
     "        \n",
     "        # Optional pertubation\n",
     "        x += r\n",
@@ -963,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -973,69 +971,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 [0/1002 (0%)]\tLoss: 0.646478\n",
-      "Train Epoch: 1 [640/1002 (62%)]\tLoss: 0.358085\n",
+      "Train Epoch: 1 [0/1002 (0%)]\tLoss: 0.694037\n",
+      "Train Epoch: 1 [640/1002 (62%)]\tLoss: 0.254386\n",
       "\n",
-      "Test set: tp 6, fp 2, tn 473, fn 77\n",
-      "Precision: 0.75, Recall: 0.07, F1_score: 0.13\n",
+      "Test set: tp 14, fp 5, tn 470, fn 69\n",
+      "Precision: 0.74, Recall: 0.17, F1_score: 0.27\n",
       "\n",
-      "Train Epoch: 2 [0/1002 (0%)]\tLoss: 0.311599\n",
-      "Train Epoch: 2 [640/1002 (62%)]\tLoss: 0.251848\n",
+      "Train Epoch: 2 [0/1002 (0%)]\tLoss: 0.193541\n",
+      "Train Epoch: 2 [640/1002 (62%)]\tLoss: 0.198769\n",
       "\n",
-      "Test set: tp 80, fp 45, tn 430, fn 3\n",
-      "Precision: 0.64, Recall: 0.96, F1_score: 0.77\n",
+      "Test set: tp 19, fp 0, tn 475, fn 64\n",
+      "Precision: 1.00, Recall: 0.23, F1_score: 0.37\n",
       "\n",
-      "Train Epoch: 3 [0/1002 (0%)]\tLoss: 0.110984\n",
-      "Train Epoch: 3 [640/1002 (62%)]\tLoss: 0.237412\n",
+      "Train Epoch: 3 [0/1002 (0%)]\tLoss: 0.104130\n",
+      "Train Epoch: 3 [640/1002 (62%)]\tLoss: 0.054401\n",
       "\n",
-      "Test set: tp 17, fp 0, tn 475, fn 66\n",
-      "Precision: 1.00, Recall: 0.20, F1_score: 0.34\n",
+      "Test set: tp 69, fp 7, tn 468, fn 14\n",
+      "Precision: 0.91, Recall: 0.83, F1_score: 0.87\n",
       "\n",
-      "Train Epoch: 4 [0/1002 (0%)]\tLoss: 0.193263\n",
-      "Train Epoch: 4 [640/1002 (62%)]\tLoss: 0.105504\n",
+      "Train Epoch: 4 [0/1002 (0%)]\tLoss: 0.121743\n",
+      "Train Epoch: 4 [640/1002 (62%)]\tLoss: 0.038571\n",
       "\n",
-      "Test set: tp 75, fp 11, tn 464, fn 8\n",
-      "Precision: 0.87, Recall: 0.90, F1_score: 0.89\n",
+      "Test set: tp 59, fp 2, tn 473, fn 24\n",
+      "Precision: 0.97, Recall: 0.71, F1_score: 0.82\n",
       "\n",
-      "Train Epoch: 5 [0/1002 (0%)]\tLoss: 0.076566\n",
-      "Train Epoch: 5 [640/1002 (62%)]\tLoss: 0.255215\n",
+      "Train Epoch: 5 [0/1002 (0%)]\tLoss: 0.051902\n",
+      "Train Epoch: 5 [640/1002 (62%)]\tLoss: 0.051333\n",
       "\n",
-      "Test set: tp 74, fp 11, tn 464, fn 9\n",
-      "Precision: 0.87, Recall: 0.89, F1_score: 0.88\n",
+      "Test set: tp 76, fp 20, tn 455, fn 7\n",
+      "Precision: 0.79, Recall: 0.92, F1_score: 0.85\n",
       "\n",
-      "Train Epoch: 6 [0/1002 (0%)]\tLoss: 0.056747\n",
-      "Train Epoch: 6 [640/1002 (62%)]\tLoss: 0.004567\n",
+      "Train Epoch: 6 [0/1002 (0%)]\tLoss: 0.079138\n",
+      "Train Epoch: 6 [640/1002 (62%)]\tLoss: 0.027348\n",
       "\n",
-      "Test set: tp 79, fp 24, tn 451, fn 4\n",
-      "Precision: 0.77, Recall: 0.95, F1_score: 0.85\n",
+      "Test set: tp 67, fp 4, tn 471, fn 16\n",
+      "Precision: 0.94, Recall: 0.81, F1_score: 0.87\n",
       "\n",
-      "Train Epoch: 7 [0/1002 (0%)]\tLoss: 0.040187\n",
-      "Train Epoch: 7 [640/1002 (62%)]\tLoss: 0.011502\n",
+      "Train Epoch: 7 [0/1002 (0%)]\tLoss: 0.012973\n",
+      "Train Epoch: 7 [640/1002 (62%)]\tLoss: 0.007394\n",
       "\n",
-      "Test set: tp 71, fp 11, tn 464, fn 12\n",
-      "Precision: 0.87, Recall: 0.86, F1_score: 0.86\n",
+      "Test set: tp 49, fp 1, tn 474, fn 34\n",
+      "Precision: 0.98, Recall: 0.59, F1_score: 0.74\n",
       "\n",
-      "Train Epoch: 8 [0/1002 (0%)]\tLoss: 0.077239\n",
-      "Train Epoch: 8 [640/1002 (62%)]\tLoss: 0.101365\n",
+      "Train Epoch: 8 [0/1002 (0%)]\tLoss: 0.050354\n",
+      "Train Epoch: 8 [640/1002 (62%)]\tLoss: 0.088437\n",
       "\n",
-      "Test set: tp 73, fp 11, tn 464, fn 10\n",
-      "Precision: 0.87, Recall: 0.88, F1_score: 0.87\n",
+      "Test set: tp 60, fp 2, tn 473, fn 23\n",
+      "Precision: 0.97, Recall: 0.72, F1_score: 0.83\n",
       "\n",
-      "Train Epoch: 9 [0/1002 (0%)]\tLoss: 0.006932\n",
-      "Train Epoch: 9 [640/1002 (62%)]\tLoss: 0.004662\n",
-      "\n",
-      "Test set: tp 57, fp 3, tn 472, fn 26\n",
-      "Precision: 0.95, Recall: 0.69, F1_score: 0.80\n",
-      "\n",
-      "Train Epoch: 10 [0/1002 (0%)]\tLoss: 0.006814\n",
-      "Train Epoch: 10 [640/1002 (62%)]\tLoss: 0.017940\n",
-      "\n",
-      "Test set: tp 54, fp 4, tn 471, fn 29\n",
-      "Precision: 0.93, Recall: 0.65, F1_score: 0.77\n",
-      "\n",
-      "37 seconds have passed\n",
-      "Best precision = 1.00\n",
-      "Best f1 score = 0.89\n"
+      "Train Epoch: 9 [0/1002 (0%)]\tLoss: 0.055893\n"
      ]
     }
    ],
