--- a/spam_classification.ipynb
+++ b/spam_classification.ipynb
@@ -24,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -39,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -126,9 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -239,9 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -409,9 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -484,9 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -663,9 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -694,9 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -720,6 +704,20 @@
    "metadata": {},
    "source": [
     "## Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keep in mind that for discrete inputs (normalized) embeddings, instead of inputs, are perturbed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](freq.png)"
    ]
   },
   {
@@ -840,6 +838,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](r_vadv.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where s is normalized word embedding vectors, and d is a T*D small random vector."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {
@@ -888,9 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train(model, train_loader, optimizer, epoch):\n",
@@ -965,7 +975,6 @@
    "cell_type": "code",
    "execution_count": 136,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1069,9 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1098,9 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1118,9 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1138,9 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1168,9 +1169,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:deep]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-deep-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1182,7 +1183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
